test/bad/b26.erl
-module(b26).

f(X) ->
    case X of
        true    -> "";
        ""      -> ""
    end.